8038797: JVMTI FollowReferences does not report roots reachable from nmethods

Also follow nmethods found on the execution stack.

Reviewed-by: dlong, mgerdin